Bug 100754 - Longer From name in the message list view overlaps on the date area
[Problem Description]
When a message has a longer From display name than the width of the message list (view by message) view pane, the taile of the From overlaps on the date area.  It happens when such a message is displayed at the odd-numbered line (1st, 3rd, 5th line), and it not selected (Once it is selected, the From area is truncated and it is not overlapped to the date area).

[Root Cause]
When the message item is displayed at the odd-numbered line, the background colour of the date area is transparent, which should have been the the same colour as the row's background colour.

[Fix Description]
Set the background colour for the odd-numbered line.
* Programming-wise, the odd-numberd line is controled by the "RowEven" class (modulo 2).

[Affected Area]
Ajax client: message list (View mode: view by message, Reading pane position: at the right).

https://bugzilla.zimbra.com/show_bug.cgi?id=100754

Copied from Perforce
 Change: 552548

--- a/WebRoot/css/common.css
+++ b/WebRoot/css/common.css
@@ -568,6 +568,8 @@ html[data-istwofactorsetuppage] .VeilOverlay TABLE {
 .RowOdd .ZmMsgListDate,
 .RowOdd .ZmListFlagsWrapper		{	background-color:@ListItemBgColor-alt@;	}
 
+.RowEven .ZmMsgListDate			{	background-color:@PanelColor@; }
+
 LI.RowDouble, LI.Row {list-style: none;}
 
 .selected TD,	/* TODO: used? */
